# TP_MATH

./: .gitignore  README.md
M-ALG/: octave-workspace
M-ALG/TP1/: RAPPORT1.docx  exercice3.m  exercice4.m  exercice6.m  exercice7_0.m  exercice7_1.m
M-ALG/TP2/: Exo6.docx  Exo6.odt  Sans nom 1.odt  exo1.m  exo4.m  exo4.m~  exo6.m
M-ALG/TP3/: exo2.m  exo5.m  exo5_pre.m  exo6.m
M-ALG/TP4/: courbeBezier.m  ecriture.m  exo1.m  exo3.m  exo3.m~  exo4.m  exo4.m~  exo4_lettres.m  exo4_test.m  untitled5.m
M-ALG/TP5/: exo1_test.m  exo2.m  exo3.m  exo4.m
M-ANA/TP2/: Exercice1.m  Exercice2.m  Exercice2_fini.m  Exercice2_preliminaire.m  rapport.odt  untitled.fig
M-ANA/TP3/: Exo1.m  Exo2_expsym.m  Exo2_gauss.m  Exo2_sinc.m  Exo2_tri.m  Exo2pre.m  test.m
M-ANA/TP4/: Exo1.m  Exo1Gauss.m  Exo1Porte.m  Exo2.m  Exo2TF.m  TD_ex3.m
M-ANA/TP5/: Exo1_1.m  Exo1_2.m  Exo2.m
M-ANA/TP6/: Exo21.m  Exo21.m~  Exo22.m  Exo22.m~  Exo22_folie_alpy.m  Exo22_folie_alpy.m~  TD.m  TD2.m  exo1cercle.m  exo1cercle.m~  exo1rect.m
Proba/TP3/: exo1.m  exo2.m  exo2.odt  impacts_nonAleatoire.m  nonAleatoire.m  traj_particule.m
Proba/exo1/: exo1.m
Proba/exo2/: LancerDeSixFaces.m  jeuA.m  jeuB.m
SP2/TP1/: exo1.m  exo2.m  exo3_1.m  exo3_2.m  exo4.m  sequence1.m  sequence2.m
SP2/TP2/: exo1.m  exo2.m  (+2 more)
maj/AnalyseNumerique/EDO_EDP/01_eigen/01_test_eigen/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cbp
maj/AnalyseNumerique/EDO_EDP/01_eigen/01_test_eigen/src/: Makefile  main.cpp
ouverture/: centreDeGravite.m  morphing.m  parametrique.m  squareParametrique.m
(+274 files in other folders)
